# aether-search

./: .gitignore  CMakeLists.txt  g.py
include/aethersearch/: file_scanner.h  model_loader.h  search_engine.h
src/: main.cpp  model_loader.cpp  search_engine.cpp
